Add Daily Route Api
